2018-03-09 Tomas Dado <tomas.dado@cern.ch>
	* Created new class that processes config input
	* Moved readig of the config from TthFit.C into separate file

2018-03-09 Alexander Held <alexander.held@cern.ch>
    * Added the possibility to create tables showing post-fit impact of groups of nuisance parameters on the POI, see readme for more information
    * Can now group Systematics and NormFactors via new SubCategory options
        * Two groups exist by default, "Gammas" and "FullSyst"
    * New command line option "i" to perform required calculations
        * Can use GroupedImpact option to parallelize (similar to ranking)

2018-02-28 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Merging some features developed for the 4top analysis
    * Updating ROOT version

2018-03-05 Tomas Dado <tomas.dadod@cern.ch>
	* Fixxing compilation error for gcc62
	* Fixxing postfit plots when morphing option is used

2018-02-09 Tomas Dado <tomas.dadod@cern.ch>
	* Moved ROOT macros for significance and limits calcuation to core code.
	Modified messaging to use TRExFitter standars. Fixed indetations
	* Still left the option to run with the ROOT macros by setting:
	"RunROOTMacros" to "True" 

2018-02-28 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixed random crashes caused by recent commits (thanks Tomas)
    * Added "Expression" option for NormFactors, which allows to correlate different norm factors in a custom way (see README)

2018-02-20 Alexander Held <alexander.held@cern.ch>
    * Changed EOL characters in TtHFit.C to unix-style
    * Updated ConfigParser.C to use StatusLogbook

2018-02-16 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixes TTHFITTER-171
    * Fixes TTHFITTER-172
    * Fixed few more things in MultiFit
    * Fixes TTHFITTER-175
    * Fixed issue with prefit yield table (thanks for spotting it Steffen)
    * Improved LH scan and fixes TTHFITTER-160
    
2018-02-15 Michele Pinamonti <michele.pinamonti@gmail.com>